[package]
name = "ctreg-macro"
version = "1.0.0"
edition = "2021"
authors = ["Nathan West <Lucretiel@gmail.com>"]

readme = "../README.md"
license = "MPL-2.0"
description = "Proc-macro implementation for ctreg"
repository = "https://github.com/Lucretiel/ctreg"

[dependencies]
regex-syntax = { workspace = true }
regex-automata = { workspace = true, features = ["meta"] }

thiserror = { workspace = true }
lazy_format = "2.0.3"

quote = "1.0.36"
syn = { version = "2.0.60", default-features = false, features = [
    "parsing",
    "proc-macro",
] }
proc-macro2 = { version = "1.0.81", default-features = false }

[lib]
proc-macro = true

[features]
