[package]
name = "ctreg"
version = "1.0.3"
description = "Compile-time regular expressions the way they were always meant to be"

edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ctreg-macro = { path = "../ctreg-macro", version = "1.0.0" }
regex-syntax = { workspace = true }
regex-automata = { workspace = true, features = ["meta"] }

[dev-dependencies]
cool_asserts = { workspace = true }

[features]
# If enabled, the demo module will be included. This should really only be
# needed when generating docs.
demo = []

[package.metadata.docs.rs]
features = ["demo"]
